--- a/src/app/seleccion/seleccion.page.scss
+++ b/src/app/seleccion/seleccion.page.scss
@@ -78,7 +78,7 @@
     background: linear-gradient(180deg, rgb(255, 255, 255) 0%,  #142c5c 500%);
   }
   
-  .greenbutton- {
+  .green-button {
     --background:     #142c5c  ;
     color: #FFF;
     
@@ -117,4 +117,5 @@
         opacity:0;
     }
   }
+  
   
