--- a/src/app/admin/admin.page.html
+++ b/src/app/admin/admin.page.html
@@ -1,9 +1,23 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>admin</ion-title>
-  </ion-toolbar>
-</ion-header>
-
+<ion-menu contentId="main-content">
+  <ion-header>
+    <ion-toolbar>
+      <ion-title>Menu</ion-title>
+    </ion-toolbar>
+  </ion-header>
+</ion-menu>
 <ion-content>
-
-</ion-content>
+  <div class="sign-container gradient-1">
+     <div class="header">
+      <div class="title ion-text-center">
+        <img src="assets/img/LOGO DOABLY2.png">
+      </div>
+    </div>
+<div class="ion-page" id="main-content">
+  <ion-header>
+    <ion-toolbar>
+      <ion-buttons slot="start">
+        <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+    </ion-toolbar>
+  </ion-header>
+</div>
