--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -10,7 +10,7 @@
     <ion-list lines="none" class="form fade-in">
     <ion-item>
       <ion-label>Email</ion-label>
-      <ion-input type="email" #email required></ion-input>
+      <ion-input type="text" #email required></ion-input>
       <ion-icon name="mail-outline"></ion-icon>
     </ion-item>
     <ion-item >
