--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -74,7 +74,7 @@
   background: linear-gradient(180deg, rgb(255, 255, 255) 0%,  #bcd33c);
 }
 .gradient-2 {
-  --background: linear-gradient(180deg,  #9cb434 , #9cb434 );
+  --background: linear-gradient(180deg,  #142c5c, #142c5c );
   background: linear-gradient(180deg, rgb(255, 255, 255) 0%,  #142c5c 500%);
 }
 
