--- a/src/app/seleccion/seleccion.page.html
+++ b/src/app/seleccion/seleccion.page.html
@@ -11,7 +11,7 @@
   <ion-col>
     <ion-button routerLink="/login" expand="block">Alumno</ion-button>
   <br>
-    <ion-button routerLink="/login" expand="block">Maestro</ion-button>
+    <ion-button routerLink="/login-maestro" expand="block">Maestro</ion-button>
   </ion-col>
 </ion-row>
       </ion-list>
