--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -26,7 +26,7 @@
   <ion-row>
     <ion-col>
       <p>
-        <a routerLink="/login">Ya tienes una cuenta?</a>
+        <a routerLink="/login-maestro">Ya tienes una cuenta?</a>
       </p>
     </ion-col>
   </ion-row>
