--- a/src/app/admin/admin.page.html
+++ b/src/app/admin/admin.page.html
@@ -10,7 +10,6 @@
   </div>
 </ion-toolbar>
   <div class="sign-container gradient-1">
-        <!-- Content Wrapper. Contains page content -->
         <div >
           <section class="content">
             <div class="container-fluid">
@@ -25,7 +24,7 @@
                       <p></p>
                     </div>
                     <div class="icon">
-                      <i class="ion ion-bag"></i>
+                      <i><ion-icon name="chatbubbles-outline"></ion-icon></i>
                     </div>
                     <a href="/contacto" class="small-box-footer">Click aqui<i class="fas fa-arrow-circle-right"></i></a>
                   </div>
@@ -40,20 +39,19 @@
                       <p></p>
                     </div>
                     <div class="icon">
-                      <i class="ion ion-stats-bars"></i>
+                      <i><ion-icon name="school-outline"></ion-icon></i>
                     </div>
                     <a href="/calificaciones" class="small-box-footer">Click aqui<i class="fas fa-arrow-circle-right"></i></a>
                   </div>
                 </div>
                 <!-- ./col -->
                 <div class="col-lg-3 col-6">
-                  <!-- small box -->
                   <div class="small-box bg-warning">
                     <div class="inner">
                       <h2>Clases</h2>
                     </div>
                     <div class="icon">
-                      <i class="ion ion-person-add"></i>
+                      <i><ion-icon name="book-outline"></ion-icon></i>
                     </div>
                     <a href="/maestros" class="small-box-footer">Click aqui<i class="fas fa-arrow-circle-right"></i></a>
                   </div>
@@ -68,7 +66,7 @@
                       <p></p>
                     </div>
                     <div class="icon">
-                      <i class="ion ion-pie-graph"></i>
+                      <i><ion-icon name="stats-chart-outline"></ion-icon></i>
                     </div>
                     <a href="/estadisticas" class="small-box-footer">Click aqui<i class="fas fa-arrow-circle-right"></i></a>
                   </div>
