--- a/src/app/admin/calificaciones/calificaciones.page.html
+++ b/src/app/admin/calificaciones/calificaciones.page.html
@@ -1,3 +1,6 @@
+<ion-header>
+  <ion-button routerLink="/admin" expand="block">Regresar</ion-button>
+</ion-header>
 <ion-content *ngIf="user$ | async as user">
     <ion-toolbar>
   <div class="user-panel mt-3 pb-3 mb-3 d-flex">
