--- a/src/app/admin/contacto/contacto.page.html
+++ b/src/app/admin/contacto/contacto.page.html
@@ -1,9 +1,6 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>contacto</ion-title>
-  </ion-toolbar>
+  <ion-button routerLink="/admin" expand="block">Regresar</ion-button>
 </ion-header>
-
 <ion-content>
 
 </ion-content>
