--- a/src/app/admin/admin.page.html
+++ b/src/app/admin/admin.page.html
@@ -18,8 +18,9 @@
               <div class="row">
                 <div class="col-lg-3 col-6">
                   <!-- small box -->
-                  <div class="small-box bg-info">
+                  <div class="small-box bg-info"  background-color: #ccc;>
                     <div class="inner">
+                    
                       <h2>Contacto</h2>
       
                       <p></p>
