--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -8,6 +8,10 @@
     <div class="login-container">
   <form>
     <ion-list lines="none" class="form fade-in">
+      <ion-item>
+        <ion-label>Nombre completo</ion-label>
+        <ion-input type="text" #displayName required></ion-input>
+      </ion-item>
     <ion-item>
       <ion-label >Email</ion-label>
       <ion-input type="text" #email required></ion-input>
