--- a/src/app/admin/admin.page.html
+++ b/src/app/admin/admin.page.html
@@ -2,7 +2,7 @@
     <ion-toolbar>
   <div class="user-panel mt-3 pb-3 mb-3 d-flex">
     <div class="image">
-      <img src="assets/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
+      <img src="assets/img/MANZANA DOABLY.png" class="img-circle elevation-2" alt="User Image">
     </div>
     <div class="info">
       <a href="/perfil" class="d-block"><strong>{{user.displayName}}</strong></a>
