--- a/src/app/admin-maestro/clases/maestros.page.scss
+++ b/src/app/admin-maestro/clases/maestros.page.scss
@@ -4,6 +4,17 @@
 }.green-icon {
     color: #142c5c ;
 }
+table{
+    border-radius: 0.50rem;
+    text-align: center;
+    font-size: large;
+}
+h3{
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-style:inherit;
+    font-weight: 200;
+    text-align: center;
+}
 .boton{
     background-color: #142c5c;
     display: inline-block;
@@ -13,6 +24,14 @@
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
   line-height: 1.5;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+.boton2{
+    background-color: #fefeff;
+    display: inline-block;
+  color: white;
+  border: 1px solid transparent;
   border-radius: 0.25rem;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
