--- a/src/app/admin-maestro/perfil/perfil.page.html
+++ b/src/app/admin-maestro/perfil/perfil.page.html
@@ -27,7 +27,7 @@
                             <div style="text-align: center;">
                                 <div class="form-group">
                                     <label>Email</label>
-                                    <input style="text-align: center;" type="email" class="form-control" value="{{user.email}}"  placeholder="{{user.email}}" disabled>
+                                    <input style="text-align: center;" type="email" class="form-control" placeholder="{{user.email}}" disabled>
                                 </div>
                             </div>
                         <div>
