--- a/src/app/admin-maestro/admin-maestro.page.html
+++ b/src/app/admin-maestro/admin-maestro.page.html
@@ -1,58 +1,83 @@
-<ion-menu contentId="main-content">
-  <ion-header>
-    <ion-toolbar>
-      <ion-list>
-        <ion-list-header>
-        </ion-list-header>
-        <ion-item [routerLink]="['/#']">
-          <ion-icon slot="start" name="home-outline"></ion-icon>
-          <ion-label>
-            Inicio
-          </ion-label>
-        </ion-item>
-        <ion-item [routerLink]="['/#']">
-          <ion-icon slot="start" name="people-outline"></ion-icon>
-          <ion-label>
-            Alumnos
-          </ion-label>
-        </ion-item>
-        <ion-item [routerLink]="['/#']">
-          <ion-icon slot="start" name="calendar-outline"></ion-icon>
-          <ion-label>
-            Calendario
-          </ion-label>
-        </ion-item>
-        <ion-item [routerLink]="['/#']">
-          <ion-icon slot="start" name="library-outline"></ion-icon>
-          <ion-label>
-            Subir calificaciones
-          </ion-label>
-        </ion-item>
-        <ion-menu-toggle autoHide="false">
-          <ion-item [routerLink]="['/login-maestro']">
-            <ion-icon slot="start" name="log-out-outline"></ion-icon>
-            <ion-label>
-              Salir
-            </ion-label>
-          </ion-item>
-        </ion-menu-toggle>
-      </ion-list>
-    </ion-toolbar>
-  </ion-header>
-</ion-menu>
-<ion-content>
-  <div class="sign-container gradient-1">
-     <div class="header">
-      <div class="title ion-text-center">
-        <img src="assets/img/LOGO DOABLY2.png">
+<ion-content *ngIf="user$ | async as user">
+  <ion-toolbar>
+<div class="user-panel mt-3 pb-3 mb-3 d-flex">
+  <div class="image">
+    <img src="assets/img/MANZANA DOABLY.png" class="img-circle elevation-2" alt="User Image">
+  </div>
+  <div class="info">
+    <a href="/perfil" class="d-block"><strong>{{user.displayName}}</strong></a>
+  </div>
+</div>
+</ion-toolbar>
+<div class="sign-container gradient-1">
+      <div >
+        <section class="content">
+          <div class="container-fluid">
+            <!-- Small boxes (Stat box) -->
+            <div class="row">
+              <div class="col-lg-3 col-6">
+                <!-- small box -->
+                <div class="small-box bg-info">
+                  <div class="inner">
+                    <h2>Contacto</h2>
+    
+                    <p></p>
+                  </div>
+                  <div class="icon">
+                    <i><ion-icon name="chatbubbles-outline"></ion-icon></i>
+                  </div>
+                  <a href="/contacto" class="small-box-footer">Click aqui<i class="fas fa-arrow-circle-right"></i></a>
+                </div>
+              </div>
+              <!-- ./col -->
+              <div class="col-lg-3 col-6">
+                <!-- small box -->
+                <div class="small-box bg-success">
+                  <div class="inner">
+                    <h2>Calificaciones<sup style="font-size: 20px"></sup></h2>
+    
+                    <p></p>
+                  </div>
+                  <div class="icon">
+                    <i><ion-icon name="school-outline"></ion-icon></i>
+                  </div>
+                  <a href="/calificaciones" class="small-box-footer">Click aqui<i class="fas fa-arrow-circle-right"></i></a>
+                </div>
+              </div>
+              <!-- ./col -->
+              <div class="col-lg-3 col-6">
+                <div class="small-box bg-warning">
+                  <div class="inner">
+                    <h2>Clases</h2>
+                  </div>
+                  <div class="icon">
+                    <i><ion-icon name="book-outline"></ion-icon></i>
+                  </div>
+                  <a href="/clases" class="small-box-footer">Click aqui<i class="fas fa-arrow-circle-right"></i></a>
+                </div>
+              </div>
+              <!-- ./col -->
+              <div class="col-lg-3 col-6">
+                <!-- small box -->
+                <div class="small-box bg-danger">
+                  <div class="inner">
+                    <h2>Estadisticas</h2>
+    
+                    <p></p>
+                  </div>
+                  <div class="icon">
+                    <i><ion-icon name="stats-chart-outline"></ion-icon></i>
+                  </div>
+                  <a href="/estadisticas" class="small-box-footer">Click aqui<i class="fas fa-arrow-circle-right"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <div class="header">
+          <div class="title ion-text-center">
+            <img src="assets/img/LOGO DOABLY2.png">
+          </div>
+        </div>
       </div>
     </div>
-<div class="ion-page" id="main-content">
-  <ion-header>
-    <ion-toolbar>
-      <ion-buttons slot="start">
-        <ion-menu-button></ion-menu-button>
-      </ion-buttons>
-    </ion-toolbar>
-  </ion-header>
-</div>
