--- a/src/app/admin/maestros/maestros.page.html
+++ b/src/app/admin/maestros/maestros.page.html
@@ -98,7 +98,7 @@
                         <td>Hora</td>
                     </tr>
                       <tr *ngFor="let clases of listTarjetas">
-                        <th>{{user.displayName}}</th>
+                        <th>{{clases.nombre_alumno}}</th>
                           <td>{{clases.nivelIngles }}</td>
                           <td>{{clases.fecha }}</td>
                           <td>{{clases.hora }}</td>
