--- a/src/app/admin-maestro/perfil/perfil.page.html
+++ b/src/app/admin-maestro/perfil/perfil.page.html
@@ -10,7 +10,7 @@
                                         <a>
                                             <img src="assets/img/3135768.png"/>
                                             <h4 class="title"  style="text-align: center;">{{user.displayName}}<br/>
-                                                <small>Alumno</small>
+                                                <small>Maestro</small>
                                             </h4>
                                         </a>
                                     </div>
