--- a/src/app/admin-maestro/clases/maestros.page.html
+++ b/src/app/admin-maestro/clases/maestros.page.html
@@ -30,15 +30,18 @@
                         <td>Fecha</td>
                         <td>Hora</td>
                      </tr>
-                      <tr *ngFor="let clases of listTarjetas">
-                        <th>{{clases.nombre_alumno}}</th>
-                          <td>{{clases.nivelIngles }}</td>
-                          <td>{{clases.fecha }}</td>
-                          <td>{{clases.hora }}</td>
-                          <td>
-                              <ion-button class="boton2">Enviar link de clase</ion-button>
-                          </td>
+                     <ng-container *ngFor="let clases of listTarjetas">
+                      <tr *ngIf="user === clases.nombre_usuario">
+                        <th scope="row">{{user}}</th>
+                        <td>{{clases.nivelIngles }}</td>
+                        <td>{{clases.fecha }}</td>
+                        <td>{{clases.hora }}</td>
+                         <td>
+                             <button (click)="editarTarjeta(clases.id)" class="far fa-edit text-info"></button>
+                             <button (click)="eliminarTarjeta(clases.id)" class="far fa-trash-alt text-danger"></button>
+                        </td>
                       </tr>
+                    </ng-container>
                   </tbody>
                </table>
           </div>
