--- a/src/app/admin/maestros/maestros.page.html
+++ b/src/app/admin/maestros/maestros.page.html
@@ -91,22 +91,25 @@
               <h3 class="titulo">Tus clases esta semana</h3>
               <table class="table">
                   <tbody>
-                    <tr *ngIf="user$ | async as user">
+                    <tr>
                         <td>Nombre</td>
                         <td>Nivel de ingles</td>
                         <td>Fecha</td>
                         <td>Hora</td>
                     </tr>
-                      <tr *ngFor="let clases of listTarjetas">
-                        <th>{{user.displayName}}</th>
+                    
+                      <ng-container *ngFor="let clases of listTarjetas">
+                        <tr *ngIf="user.displayName === clases.nombre_alumno">
+                          <th scope="row">{{clases.nombre_alumno}}</th>
                           <td>{{clases.nivelIngles }}</td>
                           <td>{{clases.fecha }}</td>
                           <td>{{clases.hora }}</td>
-                          <td>
-                              <button (click)="editarTarjeta(clases)" class="far fa-edit text-info"></button>
-                              <button (click)="eliminarTarjeta(clases.id)" class="far fa-trash-alt text-danger"></button>
+                           <td>
+                               <button (click)="editarTarjeta(clases.id)" class="far fa-edit text-info"></button>
+                               <button (click)="eliminarTarjeta(clases.id)" class="far fa-trash-alt text-danger"></button>
                           </td>
-                      </tr>
+                        
+                      </ng-container>
                   </tbody>
               </table>
           </div>
