--- a/src/app/admin/contacto/contacto.page.html
+++ b/src/app/admin/contacto/contacto.page.html
@@ -2,5 +2,11 @@
   <ion-button routerLink="/admin" expand="block">Regresar</ion-button>
 </ion-header>
 <ion-content>
-
+  <div class="sign-container gradient-1">
+  <br>
+  <form>
+    <label>Para crear un plan de trabajo con nosotros llámanos</label><br/>
+      <img src="assets/img/LOGO DOABLY.png" alt="User Image">
+  </form>
+</div>
 </ion-content>
