--- a/src/app/admin/maestros/maestros.page.html
+++ b/src/app/admin/maestros/maestros.page.html
@@ -97,19 +97,15 @@
                         <td>Fecha</td>
                         <td>Hora</td>
                     </tr>
-<<<<<<< HEAD
-                      <tr *ngFor="let clases of listTarjetas">
-                        <th>{{clases.nombre_alumno}}</th>
-=======
                     
                       <ng-container *ngFor="let clases of listTarjetas">
                         <tr *ngIf="user.displayName === clases.nombre_alumno">
                           <th scope="row">{{clases.nombre_alumno}}</th>
->>>>>>> 4a411dbf5fd43329acec27f1b47c05cb9865677e
                           <td>{{clases.nivelIngles }}</td>
                           <td>{{clases.fecha }}</td>
                           <td>{{clases.hora }}</td>
                            <td>
+                               <button (click)="editarTarjeta(clases.id)" class="far fa-edit text-info"></button>
                                <button (click)="eliminarTarjeta(clases.id)" class="far fa-trash-alt text-danger"></button>
                           </td>
                         
