--- a/src/app/admin-maestro/admin-maestro.page.html
+++ b/src/app/admin-maestro/admin-maestro.page.html
@@ -17,31 +17,15 @@
             <div class="row">
               <div class="col-lg-3 col-6">
                 <!-- small box -->
-                <div class="small-box bg-info">
-                  <div class="inner">
-                    <h2>Contacto</h2>
-    
-                    <p></p>
-                  </div>
-                  <div class="icon">
-                    <i><ion-icon name="chatbubbles-outline"></ion-icon></i>
-                  </div>
-                  <a href="/contacto" class="small-box-footer">Click aqui<i class="fas fa-arrow-circle-right"></i></a>
-                </div>
-              </div>
-              <!-- ./col -->
-              <div class="col-lg-3 col-6">
-                <!-- small box -->
                 <div class="small-box bg-success">
                   <div class="inner">
                     <h2>Calificaciones<sup style="font-size: 20px"></sup></h2>
-    
                     <p></p>
                   </div>
                   <div class="icon">
                     <i><ion-icon name="school-outline"></ion-icon></i>
                   </div>
-                  <a href="/calificaciones" class="small-box-footer">Click aqui<i class="fas fa-arrow-circle-right"></i></a>
+                  <a href="/calif" class="small-box-footer">Click aqui<i class="fas fa-arrow-circle-right"></i></a>
                 </div>
               </div>
               <!-- ./col -->
