--- a/src/app/admin/maestros/maestros.page.html
+++ b/src/app/admin/maestros/maestros.page.html
@@ -86,35 +86,25 @@
             </form>
             
         </div>
-        <div class="card">
+        <div >
           <div class="card-body">
               <h3 class="titulo">Tus clases esta semana</h3>
               <table class="table">
-                  <tbody>
                     <tr>
                         <td>Nombre</td>
                         <td>Nivel de ingles</td>
                         <td>Fecha</td>
                         <td>Hora</td>
                     </tr>
-<<<<<<< HEAD
-                      <tr *ngFor="let clases of listTarjetas">
-                        <th>{{clases.nombre_alumno}}</th>
-=======
-                    
                       <ng-container *ngFor="let clases of listTarjetas">
                         <tr *ngIf="user.displayName === clases.nombre_alumno">
                           <th scope="row">{{clases.nombre_alumno}}</th>
->>>>>>> 4a411dbf5fd43329acec27f1b47c05cb9865677e
                           <td>{{clases.nivelIngles }}</td>
                           <td>{{clases.fecha }}</td>
                           <td>{{clases.hora }}</td>
-                           <td>
-                               <button (click)="eliminarTarjeta(clases.id)" class="far fa-trash-alt text-danger"></button>
-                          </td>
+                           
                         
                       </ng-container>
-                  </tbody>
               </table>
           </div>
     </div>
