--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -22,7 +22,7 @@
     </ion-item>
     <ion-row>
       <ion-col>
-        <ion-button type="submit" (click)="onRegister(email, password)" expand="block">Register</ion-button>
+        <ion-button type="submit" (click)="onRegister(displayName, email, password)" expand="block">Register</ion-button>
       </ion-col>
     </ion-row>  
     </ion-list>
