--- a/src/app/admin-maestro/calif/calif.page.html
+++ b/src/app/admin-maestro/calif/calif.page.html
@@ -21,7 +21,11 @@
         <div class="card">
           <div class="card-body">
               <h3 class="titulo">Asistencia de los alumnos</h3>
+          <br>
+              <h2>Calificar alumno</h2>
+              <a href="/calificar-alumno">Click aqui</a>
               <br>
+              
               <table class="table">
                   <tbody>
                     <tr>
