--- a/src/app/admin-maestro/calif/calif.page.scss
+++ b/src/app/admin-maestro/calif/calif.page.scss
@@ -51,13 +51,17 @@ h3{
 .red-icon {
     color: #dc3545;
 }
+a:hover{
+    color: #dc3545;
+}
 a{
     text-align: center;
     font-size: 20px;
-    color: #142c5c;
+    color: #ffffff;
 }
 h2{
     color: #142c5c;
+    text-align: center;
 }
 option{
     color: #142c5c;
