--- a/src/app/admin-maestro/calif/calif.page.html
+++ b/src/app/admin-maestro/calif/calif.page.html
@@ -20,10 +20,8 @@
       <div class="card"  >
         <div class="card">
           <div class="card-body">
-              <h3 class="titulo">Asistencia de los alumnos</h3>
-          <br>
-              <h2>Calificar alumno</h2>
-              <a href="/calificar-alumno">Click aqui</a>
+              <h3 class="titulo">Calificar alumnos 
+              </h3>
               <br>
               
               <table class="table">
@@ -34,7 +32,7 @@
                      </tr>
                      <ng-container>
                       <tr *ngFor="let users of listTarjetas">
-                        <td>{{users.displayName}}</td>
+                        <a href="/calificar-alumno" id="usuarioseleccionado" class="usuarioseleccionado"><td>{{users.displayName}}</td></a>
                         <td>{{users.email}}</td>
                         
                       </tr>
