--- a/src/app/admin-maestro/calificar-alumno/calificar-alumno.page.scss
+++ b/src/app/admin-maestro/calificar-alumno/calificar-alumno.page.scss
@@ -13,6 +13,16 @@ h3{
     font-style:inherit;
     font-weight: 200;
 }
+.check{
+    color: #142c5c;
+    font-style:inherit;
+    
+}
+span{
+    color: #142c5c;
+    font-size: 20px;
+    
+}
 td{
     text-align: center;
     font-size: 20px;
