--- a/src/app/login-maestro/login-maestro.page.html
+++ b/src/app/login-maestro/login-maestro.page.html
@@ -9,13 +9,11 @@
    <form>
     <ion-list lines="none" class="form fade-in">
     <ion-item>
-      <ion-label>Email</ion-label>
-      <ion-input type="text" #email required></ion-input>
+      <ion-input placeholder="Ingresa email" type="text" #email required ></ion-input>
       <ion-icon name="mail-outline"></ion-icon>
     </ion-item>
     <ion-item >
-      <ion-label>Password</ion-label>
-      <ion-input type="password" #password required></ion-input>
+      <ion-input placeholder="Ingresa password" type="password" #password required></ion-input>
       <ion-icon name="lock-closed-outline"></ion-icon>
     </ion-item>
     <ion-row>
